--- a/src/package.json
+++ b/src/package.json
@@ -1,34 +1,12 @@
 {
-  "name": "hello_world",
+  "name": "aws_sam_sample",
   "version": "1.0.0",
-  "description": "hello world sample for NodeJS",
-  "main": "src/index.js",
-  "repository": "https://github.com/aws-samples/cookiecutter-aws-sam-hello-nodejs",
-  "author": "SAM CLI",
+  "description": "aws sam sample",
+  "main": "app.js",
+  "repository": "https://github.com/isamu/aws_sam_sample",
+  "author": "isamu arimoto",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.299.0",
-    "cookie": "^0.3.1",
-    "cookie-signature": "^1.1.0",
-    "crypto": "^1.0.1",
-    "deepmerge": "^2.1.1",
-    "email-validator": "^2.0.4",
-    "escape-html": "^1.0.3",
-    "lambda-router": "github:isamu/lambda-router#master",
-    "merge-deep": "^3.0.2",
-    "nodemailer": "^4.6.8",
-    "nodemailer-ses-transport": "^1.5.1",
-    "path-match": "^1.2.4",
-    "pluralize": "^7.0.0",
-    "qs": "^6.5.2",
-    "uuid": "^3.3.2",
-    "validator": "^10.7.0"
-  },
-  "scripts": {
-    "test": "mocha tests/unit/"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.1.1"
+    "lambda-router": "github:isamu/lambda-router#master"
   }
 }
